config.json: updated label in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -49,7 +49,7 @@
         "has_social": true,
         "social_links": [
             {
-                "label": "Twitter",
+                "label": "Facebook",
                 "url": "https://facebook.com/",
                 "style": "icon",
                 "icon": "facebook",
