config.json: updated url in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -50,7 +50,7 @@
         "social_links": [
             {
                 "label": "Facebook",
-                "url": "https://facebook.com/",
+                "url": "https://www.facebook.com/yogamitshilpa",
                 "style": "icon",
                 "icon": "facebook",
                 "new_window": true
