--- a/_data/config.json
+++ b/_data/config.json
@@ -57,7 +57,7 @@
             },
             {
                 "label": "Instagram",
-                "url": "https://www.instagram.com/",
+                "url": "https://www.instagram.com/yogawithshilpa/",
                 "style": "icon",
                 "icon": "instagram",
                 "new_window": true
