config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -46,7 +46,7 @@
     },
     "footer": {
         "content": "Shilpa Valia-Wendland",
-        
+        "phone": 
         "has_social": true,
         "social_links": [
             {
