config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -46,7 +46,7 @@
     },
     "footer": {
         "content": "Shilpa Valia-Wendland",
-        "phone": ,
+        "phone": "0173 360 666 5",
         "email": ,
         "slogan": ,
         "has_social": true,
