config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -47,7 +47,7 @@
     "footer": {
         "content": "Shilpa Valia-Wendland",
         "phone": "0173 360 666 5",
-        "email": ,
+        "email": "kontakt@yoga-mit-shilpa.de",
         "slogan": ,
         "has_social": true,
         "social_links": [
