config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -48,7 +48,7 @@
         "content": "Shilpa Valia-Wendland",
         "phone": "0173 360 666 5",
         "email": "kontakt@yoga-mit-shilpa.de",
-        "slogan": ,
+        "slogan": "Atme und lächle. Breathe and smile",
         "has_social": true,
         "social_links": [
             {
