stackbit.yaml: changed

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -111,6 +111,8 @@ models:
         name: content
         label: Footer content
         description: The copyright text displayed in the footer
+      -type: string
+      
       - type: list
         name: links
         label: Links
