--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -119,6 +119,8 @@ models:
         name: email
         label: E-Mail
         description: Die E-Mail-Adresse, die im Footer erscheint
+      - type: string
+        name: slogan
       - type: list
         name: links
         label: Links
