--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -121,7 +121,8 @@ models:
         description: Die E-Mail-Adresse, die im Footer erscheint
       - type: string
         name: slogan
-        
+        label: Slogan
+        description: Der Slogan am Ende des Footers
       - type: list
         name: links
         label: Links
