--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -118,7 +118,7 @@ models:
       - type: string
         name: email
         label: E-Mail
-        description: Die E-Mail-Adresse im Footer erscheint
+        description: Die E-Mail-Adresse im Footer
       - type: string
         name: slogan
         label: Slogan
