config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -50,6 +50,7 @@
         "email": "kontakt@yoga-mit-shilpa.de",
         "slogan": "Atme und lächle. Breathe and smile",
         "has_social": true,
+        "link"
         "social_links": [
             {
                 "label": "Facebook",
