--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -91,6 +91,7 @@ models:
         description: The alt text of the logo image
       - type: string
         name: leitspruch
+        label: Leitspruch
       - type: boolean
         name: has_nav
         label: Enable navigation menu
