stackbit.yaml: changed

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -92,6 +92,7 @@ models:
       - type: string
         name: leitspruch
         label: Leitspruch
+        description: 
       - type: boolean
         name: has_nav
         label: Enable navigation menu
