--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -92,7 +92,7 @@ models:
       - type: string
         name: leitspruch
         label: Leitspruch
-        description: Leitspruch 
+        description: Leitspruch oben rechts
       - type: boolean
         name: has_nav
         label: Enable navigation menu
