config.json: updated leitspruch in header

--- a/_data/config.json
+++ b/_data/config.json
@@ -9,7 +9,7 @@
         "logo_alt": "Yoga mit Shilpa",
         "branding": "images/lotos.png",
         "branding_alt": "Symbolbild Lotosblüte",
-        "leitspruch": "Breathe... and laugh!",
+        "leitspruch": "Breathe... and smile!",
         "has_nav": true,
         "nav_links": [
             {
