--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -95,7 +95,7 @@ models:
         description: Leitspruch oben rechts
       - type: string
         name: words
-        label: 
+        label: Hintergrundbild
       - type: boolean
         name: has_nav
         label: Enable navigation menu
