--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -96,6 +96,7 @@ models:
       - type: string
         name: words
         label: Spruchwolke
+        description: Dateiname der Spruchwolke
       - type: boolean
         name: has_nav
         label: Enable navigation menu
