config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -11,7 +11,7 @@
         "branding_alt": "Symbolbild Lotosblüte",
         "leitspruch": "Breathe... and smile!",
         "wolke": "images/words.png", 
-        "wolke_alt": ""
+        "wolke_alt": "Leitsprüche"
         "has_nav": true,
         "nav_links": [
             {
