config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Yoga mit Shilpa Namaste!",
+    "title": "Yoga mit Shilpa - Namaste!",
     "color_scheme": "light",
     "accent_color": "yellow",
     "base_font": "fraunces",
