config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -46,7 +46,7 @@
                 "style": "link"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Kursplan",
                 "url": "#",
                 "style": "link",
                 "icon": "lotos",
