--- a/_data/config.json
+++ b/_data/config.json
@@ -21,7 +21,7 @@
                 "icon": "lotos"
             },
             {
-                "label": "Kursplan",
+                "label": "Philosophie",
                 "url": "#",
                 "style": "link",
                 "icon": "lotos",
