--- a/_data/config.json
+++ b/_data/config.json
@@ -49,7 +49,7 @@
                 "style": "link"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Yoga-Therapie",
                 "url": "#",
                 "style": "link",
                 "icon": "lotos",
