config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -50,7 +50,7 @@
             },
             {
                 "label": "Yoga-Therapie",
-                "url": "#",
+                "url": "therapie",
                 "style": "link",
                 "icon": "lotos",
                 "new_window": false,
