config.json: updated title in header

--- a/_data/config.json
+++ b/_data/config.json
@@ -4,7 +4,7 @@
     "accent_color": "yellow",
     "base_font": "fraunces",
     "header": {
-        "title": "Agency",
+        "title": "Yoga mit Shilpa",
         "logo": "images/logo.png",
         "logo_alt": "Yoga mit Shilpa",
         "branding": "images/lotos.png",
