config.json: updated label in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -21,7 +21,7 @@
                 "icon": "lotos"
             },
             {
-                "label": "Meine Kurse",
+                "label": "Kursplan",
                 "url": "/portfolio/kursplan",
                 "style": "link"
             },
