--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -104,7 +104,7 @@ models:
         default: true
       - type: list
         name: nav_links
-        label: Navigation links
+        label: Navigations-Links
         description: A list of navigation links
         items:
           type: model
