--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -105,7 +105,7 @@ models:
       - type: list
         name: nav_links
         label: Navigations-Links
-        description: Liste von Navigation links
+        description: Liste von Navigations-Links
         items:
           type: model
           models:
