--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -79,7 +79,7 @@ models:
     fields:
       - type: string
         name: title
-        label: Header title
+        label: Kopf-Titel
         description: The title displayed in the header if no logo image added
       - type: image
         name: logo
