--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -80,7 +80,7 @@ models:
       - type: string
         name: title
         label: Kopf-Titel
-        description: The title displayed in the header if no logo image added
+        description: Titel im Kopf wenn  logo image added
       - type: image
         name: logo
         label: Logo
