--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -99,7 +99,7 @@ models:
         description: Dateiname der Spruchwolke
       - type: boolean
         name: has_nav
-        label: Navigation menu
+        label: Navigations-Menü aktiv
         description: Display the navigation menu bar in the header
         default: true
       - type: list
