stackbit.yaml: changed

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -100,7 +100,7 @@ models:
       - type: boolean
         name: has_nav
         label: Navigations-Menü aktiv
-        description: Display the navigation menu bar in the header
+        description: Navigationsmenü im Seitenkopf anzeigen
         default: true
       - type: list
         name: nav_links
