stackbit.yaml: changed

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -112,7 +112,7 @@ models:
             - action
   footer:
     type: object
-    label: Footer Configuration
+    label: Footer-Konfiguration
     labelField: content
     fields:
       - type: string
