config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -27,7 +27,7 @@
             },
             {
                 "label": "Philosophie",
-                "url": "/portfolio/philosophie",
+                "url": "/blog/philosophie",
                 "style": "link",
                 "icon": "lotos",
                 "new_window": false,
