--- a/_data/config.json
+++ b/_data/config.json
@@ -35,7 +35,7 @@
             },
             {
                 "label": "Yoga-Therapie",
-                "url": "/portfolio/therapie",
+                "url": "/blog/therapie",
                 "style": "link",
                 "icon": "lotos",
                 "new_window": false,
