config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -48,7 +48,7 @@
             },
             {
                 "label": "Kontakt",
-                "url": "/contact/",
+                "url": "/kontakct/",
                 "style": "link"
             }
         ]
