--- a/_data/config.json
+++ b/_data/config.json
@@ -43,7 +43,7 @@
             },
             {
                 "label": "Specials",
-                "url": "#",
+                "url": "specials",
                 "style": "link"
             },
             {
