config.json: updated url in nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -43,7 +43,7 @@
             },
             {
                 "label": "Specials",
-                "url": "specials",
+                "url": "/specials",
                 "style": "link"
             },
             {
