stackbit.yaml: changed

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -193,7 +193,7 @@ models:
   blog:
     type: page
     urlPath: /specials
-    label: Blog
+    label: Specials
     layout: blog
     file: specials/index.md
     hideContent: true
