--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -206,7 +206,7 @@ models:
         required: true
       - type: string
         name: subtitle
-        label: Subtitle
+        label: Untertitel
         description: The text shown just below the page title
       - type: boolean
         name: hide_title
