config.json: updated slogan in footer

--- a/_data/config.json
+++ b/_data/config.json
@@ -57,7 +57,7 @@
         "content": "Shilpa Valia-Wendland",
         "phone": "0173 360 666 5",
         "email": "kontakt@yoga-mit-shilpa.de",
-        "slogan": "Atme und lächle. Breathe and smile",
+        "slogan": "Atme und lächle. Breathe and smile.",
         "has_social": true,
         "link": "impressum",
         "social_links": [
