config.json: changed

--- a/_data/config.json
+++ b/_data/config.json
@@ -22,7 +22,7 @@
             },
             {
                 "label": "Kursplan",
-                "url": "/portfolio/kursplan",
+                "url": "/kursplan",
                 "style": "link"
             },
             {
