stackbit.yaml: changed

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -186,6 +186,7 @@ models:
             - posts_section
             - testimonials_section
             - form_section
+            - text_section
       - type: model
         name: seo
         models:
