add content_section to project layout

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -368,6 +368,7 @@ models:
           type: model
           models:
             - image_section
+            - content_section
       - type: model
         name: seo
         models:
